[Graal] vmTestbase/nsk/jdi/VirtualMachine/instanceCounts/instancecounts003/instancecounts003.java crash

XMLWordPrintable

    • b20

      debugee.stderr> Exception: java.lang.OutOfMemoryError thrown from the UncaughtExceptionHandler in thread "HotSpotGraalManagement Bean Registration"
      debugee.stderr> Debuggee nsk.share.jdi.AbstractJDIDebuggee : sending the command: ready
      debugee.stderr> Debuggee: received the command: unloadClass:nsk.share.jdi.TestInterfaceImplementer1
      debugee.stdout> [Use -Dgraal.LogFile=<path> to redirect Graal log output to a file.]
      debugee.stdout> Thread[JVMCI CompilerThread1,9,system]: Compilation of java.lang.StringLatin1.hashCode(byte[]) failed:
      debugee.stdout> java.lang.OutOfMemoryError: Java heap space
      debugee.stdout> To disable compilation failure notifications, set CompilationFailureAction to Silent (e.g., -Dgraal.CompilationFailureAction=Silent).
      debugee.stdout> To print a message for a compilation failure without retrying the compilation, set CompilationFailureAction to Print (e.g., -Dgraal.CompilationFailureAction=Print).
      debugee.stdout> Retrying compilation of java.lang.StringLatin1.hashCode(byte[])
      debugee.stdout> # To suppress the following error report, specify this argument
      debugee.stdout> # after -XX: or in .hotspotrc: SuppressErrorAt=/classLoaderData.cpp:348
      debugee.stdout> #
      debugee.stdout> # A fatal error has been detected by the Java Runtime Environment:
      debugee.stdout> #
      debugee.stdout> # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1291/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/8def6b99-160c-4695-8594-16f8ce869c8d/runs/f683c77e-4411-4a1e-8746-4b065ae07443/workspace/open/src/hotspot/share/classfile/classLoaderData.cpp:348), pid=31695, tid=31753
      debugee.stdout> # assert(m != __null) failed: NULL mirror
      debugee.stdout> #


      Current CompileTask:
      JVMCI: 29449 524 4 java.lang.String::startsWith (138 bytes)

      Stack: [0x00007fd861369000,0x00007fd86146a000], sp=0x00007fd861464960, free space=1006k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x949d52] ClassLoaderData::loaded_classes_do(KlassClosure*)+0x352
      V [libjvm.so+0x9576f1] ClassLoaderDataGraph::loaded_classes_do(KlassClosure*)+0x221
      V [libjvm.so+0x1183a3a] JvmtiGetLoadedClasses::getLoadedClasses(JvmtiEnv*, int*, _jclass***)+0xea
      V [libjvm.so+0x10e7149] jvmti_GetLoadedClasses+0x129
      C [libjdwp.so+0xcd57] classTrack_processUnloads+0x77
      C [libjdwp.so+0x14f9b] event_callback+0x32b
      C [libjdwp.so+0x15d64] cbClassPrepare+0x94
      V [libjvm.so+0x11764e5] JvmtiExport::post_class_prepare(JavaThread*, Klass*)+0x155
      V [libjvm.so+0xe50602] InstanceKlass::link_class_impl(Thread*)+0x502
      V [libjvm.so+0xe5091a] InstanceKlass::link_class(Thread*)+0x7a
      V [libjvm.so+0x175061d] SystemDictionary::parse_stream(Symbol*, Handle, Handle, ClassFileStream*, InstanceKlass const*, GrowableArray<Handle>*, Thread*)+0x25d
      V [libjvm.so+0x18135af] Unsafe_DefineAnonymousClass0+0x111f
      j jdk.internal.misc.Unsafe.defineAnonymousClass0(Ljava/lang/Class;[B[Ljava/lang/Object;)Ljava/lang/Class;+0 java.base@12-internal
      j jdk.internal.misc.Unsafe.defineAnonymousClass(Ljava/lang/Class;[B[Ljava/lang/Object;)Ljava/lang/Class;+42 java.base@12-internal
      j java.lang.invoke.InnerClassLambdaMetafactory.spinInnerClass()Ljava/lang/Class;+511 java.base@12-internal
      j java.lang.invoke.InnerClassLambdaMetafactory.buildCallSite()Ljava/lang/invoke/CallSite;+1 java.base@12-internal
      j java.lang.invoke.LambdaMetafactory.altMetafactory(Ljava/lang/invoke/MethodHandles$Lookup;Ljava/lang/String;Ljava/lang/invoke/MethodType;[Ljava/lang/Object;)Ljava/lang/invoke/CallSite;+283 java.base@12-internal
      j java.lang.invoke.DirectMethodHandle$Holder.invokeStatic(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+16 java.base@12-internal
      j java.lang.invoke.DelegatingMethodHandle$Holder.delegate(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+19 java.base@12-internal
      j java.lang.invoke.Invokers$Holder.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;+24 java.base@12-internal
      j java.lang.invoke.BootstrapMethodInvoker.invoke(Ljava/lang/Class;Ljava/lang/invoke/MethodHandle;Ljava/lang/String;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Class;)Ljava/lang/Object;+395 java.base@12-internal
      j java.lang.invoke.CallSite.makeSite(Ljava/lang/invoke/MethodHandle;Ljava/lang/String;Ljava/lang/invoke/MethodType;Ljava/lang/Object;Ljava/lang/Class;)Ljava/lang/invoke/CallSite;+8 java.base@12-internal
      j java.lang.invoke.MethodHandleNatives.linkCallSiteImpl(Ljava/lang/Class;Ljava/lang/invoke/MethodHandle;Ljava/lang/String;Ljava/lang/invoke/MethodType;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/invoke/MemberName;+6 java.base@12-internal
      j java.lang.invoke.MethodHandleNatives.linkCallSite(Ljava/lang/Object;ILjava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/invoke/MemberName;+46 java.base@12-internal
      v ~StubRoutines::call_stub
      V [libjvm.so+0xe98b20] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x920
      V [libjvm.so+0xe95fb1] JavaCalls::call_static(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x1a1
      V [libjvm.so+0x174f35a] SystemDictionary::find_dynamic_call_site_invoker(Klass*, int, Handle, Symbol*, Symbol*, Handle*, Handle*, Thread*)+0x60a
      V [libjvm.so+0x1201abf] LinkResolver::resolve_invokedynamic(CallInfo&, constantPoolHandle const&, int, Thread*)+0x30f
      V [libjvm.so+0x1209596] LinkResolver::resolve_invoke(CallInfo&, Handle, constantPoolHandle const&, int, Bytecodes::Code, Thread*)+0x176
      V [libjvm.so+0xe7f05b] InterpreterRuntime::resolve_invokedynamic(JavaThread*)+0x1ab
      V [libjvm.so+0xe87c20] InterpreterRuntime::resolve_from_cache(JavaThread*, Bytecodes::Code)+0xd0
      j org.graalvm.compiler.nodes.calc.UnsignedRightShiftNode.<init>(Lorg/graalvm/compiler/nodes/ValueNode;Lorg/graalvm/compiler/nodes/ValueNode;)V+4 jdk.internal.vm.compiler@12-internal
      j org.graalvm.compiler.nodes.calc.RightShiftNode.canonical(Lorg/graalvm/compiler/nodes/calc/RightShiftNode;Lorg/graalvm/compiler/core/common/type/ArithmeticOpTable$ShiftOp;Lorg/graalvm/compiler/core/comm[...]

        1. hs_err_pid24254.log
          115 kB
        2. hs_err_pid4102.log
          67 kB
        3. hs_err_pid5362.log
          124 kB

            Assignee:
            Harold Seigel (Inactive)
            Reporter:
            Dean Long
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: