8217846: [Graal] vmTestbase/nsk/jdi/VirtualMachine/instanceCounts/instancecounts003/instancecounts003.java crash

Make sure the array calls's mirror was successfully created before putting the array class on its class loader data list

Reviewed-by: lfoltan, coleenp